# Maps-Biz-Scraper

./: .env.example  .gitignore  AUTO_SKIP_STUCK_JOBS.md  BUGFIX_NOTES.md  BULK_JOB_FIX.md  COMPLETE_FEATURES.md  DASHBOARD_README.md  DEPLOYMENT_OCI.md  DEPLOYMENT_READY.txt  Dockerfile  FILE_STRUCTURE.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  JOB_MANAGEMENT_FIXED.md  JOB_SELECTION_FEATURE.md  Jobs list.txt  LIVE_DASHBOARD_FIX.md  LIVE_UPDATES.md  OCI_DEPLOYMENT_SUMMARY.md  PROXY_FIX_SUMMARY.md  PROXY_FIX_URGENT.md  PROXY_VERIFICATION.md  QUICK_START_ORACLE.md  QUICK_START_SCRAPING.md  README.md  README_BUSINESS.md  README_DEPLOYMENT.md  README_NEW.md  README_ORACLE.md  RESET_BUTTON_ADDED.md  SIMPLE_ORACLE_DEPLOY.md  START_HERE.md  STATUS_SUMMARY.md  UI_IMPROVEMENTS.md  USAGE_GUIDE.md  WHAT_WAS_DONE.md  What to do  add_new_job.py  app.py  auth.py  (+47 more)
.github/workflows/: deploy.yml
docs/: README.md  business-plan.md
docs/deployment/: checklist.md
docs/guides/: csv-import.md  dashboard.md  pdf-generation.md
docs/technical/: architecture.md  scraping-strategy.md
templates/: base.html  export.html  index.html  scraping.html
tests/: conftest.py  test_config.py  test_proxy_manager.py
